Fix toolbar animation/hide.

Toolbar was not hiding properly because we did not respect animation
logic with new layout manager. Fix was to animate preferred and minimum
size with animation, as before.

Bug: 916106
Change-Id: Iffb4344399a0a6f8c80f34f78d432b03dad7f1fd
Reviewed-on: https://chromium-review.googlesource.com/c/1383402
Reviewed-by: Peter Boström <pbos@chromium.org>
Commit-Queue: Dana Fried <dfried@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617716}
Former-commit-id: 5c6c67597ad28aca94ab863e05f436f5d32ac556